[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# These two dependencies are required for the building of transactions.
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }

hex = { version = "0.4.3" }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

reqwest = { version = "0.11", features = ["json", "blocking"] }